// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/shop/Product matches snapshot renders image with title, brand, size and price 1`] = `
<Card
  body={false}
  id={1}
>
  <CardImg
    className={null}
    src="mockImg"
    variant="top"
  />
  <CardImgOverlay>
    <CardTitle
      className="like"
    >
      <img
        onClick={[Function]}
        src="test-file-stub"
      />
    </CardTitle>
  </CardImgOverlay>
  <CardBody>
    <CardTitle>
      mockTitle
    </CardTitle>
    <CardText>
      <span>
        Brand: 
        mockBrand
      </span>
      <span>
        Size: 
        mockSize
      </span>
      <span>
        <b>
          Price: £
          20
        </b>
      </span>
    </CardText>
  </CardBody>
</Card>
`;

exports[`components/shop/Product matches snapshot when brand is not present renders default N/A 1`] = `
<Card
  body={false}
  id={1}
>
  <CardImg
    className={null}
    src="mockImg"
    variant="top"
  />
  <CardImgOverlay>
    <CardTitle
      className="like"
    >
      <img
        onClick={[Function]}
        src="test-file-stub"
      />
    </CardTitle>
  </CardImgOverlay>
  <CardBody>
    <CardTitle>
      mockTitle
    </CardTitle>
    <CardText>
      <span>
        Brand: 
        N/A
      </span>
      <span>
        Size: 
        mockSize
      </span>
      <span>
        <b>
          Price: £
          20
        </b>
      </span>
    </CardText>
  </CardBody>
</Card>
`;

exports[`components/shop/Product matches snapshot when product is sold renders with overlay 1`] = `
<Card
  body={false}
  id={1}
>
  <CardImg
    className="card-img-sold"
    src="mockImg"
    variant="top"
  />
  <CardImgOverlay>
    <CardTitle>
      SOLD
    </CardTitle>
  </CardImgOverlay>
  <CardImgOverlay>
    <CardTitle
      className="like"
    >
      <img
        onClick={[Function]}
        src="test-file-stub"
      />
    </CardTitle>
  </CardImgOverlay>
  <CardBody>
    <CardTitle>
      mockTitle
    </CardTitle>
    <CardText>
      <span>
        Brand: 
        mockBrand
      </span>
      <span>
        Size: 
        mockSize
      </span>
      <span>
        <b>
          Price: £
          20
        </b>
      </span>
    </CardText>
  </CardBody>
</Card>
`;
